--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,13 +3,18 @@
   src: url(../assets/aileron_font/Aileron-Heavy.otf);
 }
 
+@font-face {
+  font-family: 'Aileron Bold';
+  src: url(../assets/aileron_font/Aileron-Bold.otf);
+}
+
 :root {
   --bg-colour: #282828;
-  --primary-colour: #77DD76;
-  --accent-good: #BDE7BD;
-  --accent-bad: #FFB6B3;
-  --main-bad: #FF6962;
-  --text-main: #E7E7E7;
+  --primary-colour: #77dd76;
+  --accent-good: #bde7bd;
+  --accent-bad: #ffb6b3;
+  --main-bad: #ff6962;
+  --text-main: #e7e7e7;
 }
 
 body {
@@ -18,19 +23,39 @@ body {
   color: var(--text-main);
   display: flex;
   flex-direction: column;
-  /* position: relative; */
+  position: relative;
+  overflow: hidden;
 }
 
 h1 {
   font-size: 5rem;
+  font-family: 'Aileron Bold';
 }
 
-/* #bg-blob {
+#bg-blob {
   position: absolute;
-  height: 300px;
+  height: 400px;
   aspect-ratio: 1;
-  background-color: var(--primary-colour);
-} */
+  z-index: -10;
+  translate: -50% -50%;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  background: linear-gradient(
+    to right,
+    var(--primary-colour),
+    var(--accent-good)
+  );
+  animation: rotate 20s infinite;
+}
+
+#blur-layer {
+  z-index: -9;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backdrop-filter: blur(500px);
+}
 
 .navbar {
   display: flex;
@@ -91,8 +116,22 @@ h1 {
 
 .preview-card {
   height: 6rem;
-  background-color: #FF6962;
+  background-color: #ff6962;
   border-radius: 10px;
 }
 
 /* End - Styling for landing page */
+
+/* Animations */
+
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+  50% {
+    scale: 1 1.3;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
