--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,6 +15,9 @@
   --accent-bad: #ffb6b3;
   --main-bad: #ff6962;
   --text-main: #e7e7e7;
+  --input-color: #343434;
+  --card1-color: #fcd45b;
+  --card-nifty: #554994;
 }
 
 body {
@@ -91,14 +94,16 @@ h1 {
 .hero-heading {
   display: flex;
   flex-direction: column;
+  gap: 1.5rem;
 }
 
 #searchInput {
+  all: unset;
   width: 35%;
-  height: 2rem;
-  background-color: var(--bg-colour);
+  height: 3rem;
+  background-color: var(--input-color);
   color: var(--text-main);
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .bottom-area {
@@ -118,6 +123,14 @@ h1 {
   height: 6rem;
   background-color: #ff6962;
   border-radius: 10px;
+}
+
+.preview-card.btc {
+  background-color: var(--card1-color);
+}
+
+.preview-card.nifty {
+  background-color: var(--card-nifty);
 }
 
 /* End - Styling for landing page */
